--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "opt-table",
-  "version": "1.1.9-alpha",
+  "version": "1.3.0-alpha",
   "description": "A Responsive and Customizable Rich Table",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -42,7 +42,6 @@
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.3",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "source-map-loader": "4.0.1",
@@ -52,6 +51,15 @@
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   },
+  "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.15",
+    "@mui/material": "^5.14.15",
+    "framer-motion": "^10.16.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "peerDependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -59,8 +67,7 @@
     "@mui/material": "^5.14.15",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.1.3"
+    "react-dom": "^18.2.0"
   },
   "keywords": [
     "table",
